# web/public/openapi.yaml
@@ -52,7 +52,6 @@ tags:
   - name: Notes
   - name: OAuth clients
   - name: Personal access tokens
-  - name: Patreon
   - name: Custom emojis
   - name: Admin
 components:
@@ -245,23 +244,6 @@ paths:
                 refresh_token:
                   type: string
               required: ["grant_type", "client_id", "client_secret"]
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/oauth/callback:
-    get:
-      tags:
-        - Patreon
-      summary: Patreon OAuth callback
-      security: []
       responses:
         '200':
           description: Success (or streaming body for SSE)
@@ -2187,132 +2169,6 @@ paths:
       tags:
         - Account
       summary: Patch profile
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /me/patreon-note-paywall:
-    patch:
-      tags:
-        - Account
-      summary: Patch Patreon note paywall
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/member/authorize-url:
-    get:
-      tags:
-        - Patreon
-      summary: Patreon member authorize URL
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/creator/authorize-url:
-    get:
-      tags:
-        - Patreon
-      summary: Patreon creator authorize URL
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/creator/campaigns:
-    get:
-      tags:
-        - Patreon
-      summary: Patreon creator campaigns
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/creator/tiers:
-    get:
-      tags:
-        - Patreon
-      summary: Patreon creator tiers
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/member/disconnect:
-    post:
-      tags:
-        - Patreon
-      summary: Disconnect Patreon member
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /patreon/creator/disconnect:
-    post:
-      tags:
-        - Patreon
-      summary: Disconnect Patreon creator
       security:
         - bearerAuth: []
       responses:
